Upgrade to process financial bookkeeping - add extractors for transactions - add bookkeeping accounts - modifications on CODA parsing

--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -111,12 +111,19 @@
 						<li {% if env.module.get_name() == 'setting_configuration' %}class="active"{% endif %}><a href="/setting/configuration">{% trans "Configuration" %}</a></li>
 						<li {% if env.module.get_name() == 'setting_company' %}class="active"{% endif %}><a href="/setting/company">{% trans "Company" %}</a></li>
 						<li {% if env.module.get_name() == 'setting_mailscanner' %}class="active"{% endif %}><a href="/setting/mailscanner">{% trans "Mailscanner" %}</a></li>
-						{% if settings.setasign_pdf_extractor %}
-							<li {% if env.module.get_name() == 'setting_extractor' %}class="active"{% endif %}><a href="/setting/extractor">{% trans "PDF Extractor" %}</a></li>
-						{% endif %}
 						<li {% if env.module.get_name() == 'setting_api' %}class="active"{% endif %}><a href="/setting/api">{% trans "Api settings" %}</a></li>
+
+						<li class="dropdown-submenu">
+							<a href="#" data-toggle="dropdown">{% trans "Extractor" %}</a>
+							<ul class="dropdown-menu">
+								<li><a href="/setting/extractor/pdf">{% trans "PDF Documents" %}</a></li>
+								<li><a href="/setting/extractor/transaction">{% trans "Bank Transaction" %}</a></li>
+							</ul>
+						</li>
+
 					</ul>
 				</li>
+
 			</ul>
 			{% endif %}
 
