--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -164,7 +164,7 @@
 
 						{% if settings.setasign_pdf_extractor %}
 						<span class="pull-right">
-							<a href="/setting/extractor?action=create&document_id={{ document.id }}">
+							<a href="/setting/extractor/pdf?action=create&document_id={{ document.id }}">
 								<i class="fa fa-file-text" aria-hidden="true"></i> {% trans "Create extractor" %}
 							</a>
 						</span>
