--- a/app/admin/template/bookkeeping/account.twig
+++ b/app/admin/template/bookkeeping/account.twig
@@ -118,7 +118,7 @@
 				{% trans "Filter" %}
 			</div>
 			<div class="panel-body">
-				<form method="post" action="/administrative/bookkeeping_account" class="form-horizontal">
+				<form method="post" action="/bookkeeping/account" class="form-horizontal">
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Search" %}</label>
 						<div class="col-xs-5">
