--- a/app/admin/template/administrative/document/document.form.contract.twig
+++ b/app/admin/template/administrative/document/document.form.contract.twig
@@ -1,10 +1,11 @@
 	<hr>
+
 	<div class="form-group">
 		<label class="col-xs-3 control-label">{% trans "Contract for" %}</label>
 
 		<div class="col-xs-9">
 			<label class="radio-inline">
-				<input type="radio" name="contract_for" value="customer" {% if document.customer_id > 0 %}checked{% endif %}>{% trans "Customer" %}
+				<input type="radio" name="contract_for" value="customer" {% if document.customer_id > 0 or document_customer_id == '' %}checked{% endif %}>{% trans "Customer" %}
 			</label>
 
 			<label class="radio-inline">
