--- a/app/admin/template/financial/account/transaction/modal.incoming_invoice.twig
+++ b/app/admin/template/financial/account/transaction/modal.incoming_invoice.twig
@@ -3,52 +3,91 @@
 
 {% block body %}
 
-<form action="{{ env.module.get_module_path() }}?action=edit&id={{ transaction.id }}" method="post" class="form-horizontal form-condensed" id="search_incoming_invoices">
-<input type="hidden" name="transaction_id" value="{{ transaction.id }}" />
+<h5>1. {% trans "Transaction information" %}</h5>
+	<dl class="dl-horizontal">
+		<dt>{% trans "Transaction amount" %}</dt>
+		<dd>&euro;{{ transaction.amount }}</dd>
 
-<div class="form-group">
-	<label class="col-xs-3 control-label">{% trans "Transaction amount" %}</label>
-	<div class="col-xs-9">
-		<p class="form-control-static">
-			&euro;{{ transaction.amount }}
-		</p>
-	</div>
-</div>
+		<dt>{% trans "To/from" %}</dt>
+		<dd>{{ transaction.other_account_name }}</dd>
 
-<div class="form-group">
-	<label class="col-xs-3 control-label">{% trans "To/from" %}</label>
-	<div class="col-xs-9">
-		<p class="form-control-static">
-			{{ transaction.other_account_name }}
-		</p>
-	</div>
-</div>
+		<dt>{% trans "Message" %}</dt>
+		<dd>{{ transaction.message }}</dd>
 
-<div class="form-group">
-	<label class="col-xs-3 control-label">{% trans "Balance" %}</label>
-	<div class="col-xs-9">
-		<p class="form-control-static">
-			&euro;{{ transaction.get_balance() }}
-		</p>
-	</div>
-</div>
+		<dt>{% trans "Transaction Balance" %}</dt>
+		<dd>&euro;{{ transaction.get_balance() }}</dd>
+
+		<dt>{% trans "Date" %}</dt>
+		<dd>{{ transaction.date|date }}</dd>
+	</dl>
+
 <hr />
 
-<div class="form-group">
-	<label class="col-xs-3 control-label">{% trans "Search incoming invoice" %}</label>
-	<div class="col-xs-6">
-		<div class="input-group">
-			<input type="text" name="search" id="txt_search_incoming_invoices" class="form-control" value="{{ transaction.get_message() }}" />
-			<span class="input-group-btn">
-				<button class="btn btn-primary" type="button" onclick="search_incoming_invoices();">{% trans "Search" %}</button>
-			</span>
+
+<form action="{{ env.module.get_module_path() }}?action=edit&id={{ transaction.id }}" method="post" class="form-horizontal form-condensed" id="search_incoming_invoices">
+<h5>2. {% trans "Search invoices" %}</h5>
+	<div class="form-group">
+		<label class="col-xs-3 control-label">{% trans "Search invoice" %}</label>
+		<div class="col-xs-6">
+			<div class="input-group">
+				<input type="text" name="search" id="txt_search_incoming_invoices" class="form-control" value="{{ transaction.get_message() }}" />
+				<span class="input-group-btn">
+					<button class="btn btn-primary" type="button" onclick="search_incoming_invoices();">{% trans "Search" %}</button>
+				</span>
+			</div>
 		</div>
 	</div>
-</div>
 
-<div class="search_incoming_invoice_results"></div>
+	<div class="search_results"></div>
+
+<hr />
+</form>
+
+<form action="{{ env.module.get_module_path() }}?action=link_incoming_invoice" method="post" class="form-horizontal form-condensed" id="link_incoming_invoice">
+<h5>3. {% trans "Confirm link" %}</h5>
+	<input type="hidden" name="transaction_id" value="{{ transaction.id }}" />
+	<input type="hidden" name="document_id" id="document_id" value="" />
+
+	<div id="confirm_link_incoming_invoices">
+		<div class="alert alert-info">{% trans "Please select an invoice in the search result" %}</div>
+	</div>
 
 </form>
+
+<script type="text/x-handlebars-template" id="selected-incoming-invoice">
+	<div class="alert alert-danger hide">
+		{% trans "There is a problem with the amounts you have entered." %} {% trans "The total amount cannot exceed the amount of the transaction" %}.
+	</div>
+	<div class="form-group">
+		<label class="col-xs-3 control-label">{% trans "Link with invoice" %}</label>
+		<div class="col-xs-3">
+			<div class="input-group">
+				<span class="input-group-addon">&euro;</span>
+				<input type="text" class="form-control" id="link_incoming_invoice_amount" style="width: 143px;" name="link_incoming_invoice_amount" value="">
+			</div>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-xs-3 control-label">{% trans "Link with supplier" %}</label>
+		<div class="col-xs-4">
+			<div class="input-group">
+				<span class="input-group-addon">&euro;</span>
+				<input type="text" class="form-control" id="link_supplier_amount" style="width: 143px;" name="link_supplier_amount" value="">
+				<span class="input-group-btn">
+					<button class="btn btn-default" id="supplier_amount_0" type="button">€0</button>
+					<button class="btn btn-default" id="supplier_amount_max" type="button">{% trans "Max" %}</button>
+				</span>
+			</div>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<div class="col-xs-9 col-xs-offset-3">
+			<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+		</div>
+	</div>
+</script>
 
 
 <script type="text/javascript">
@@ -56,14 +95,29 @@
 		search_incoming_invoices();
 		event.preventDefault();
 	});
+
+	$('#modal_incoming_invoice').on('shown.bs.modal', function () {
+		search_incoming_invoices();
+	});
+
+	$('#link_incoming_invoice').submit(function(event) {
+		invoice_amount = $('#link_invoice_amount').val()
+		supplier_amount = $('#link_supplier_amount').val()
+		if ({{ transaction.get_balance() }} < invoice_amount + supplier_amount) {
+			$('#confirm_link_incoming_invoices .alert').removeClass('hide');
+			event.preventDefault();
+			return false;
+		} else {
+			$('#confirm_link_incoming_invoices .alert').addClass('hide');
+			return true;
+		}
+	})
+
 	function search_incoming_invoices() {
 		url = '/financial/account/transaction?action=search_incoming_invoices&transaction_id={{ transaction.id }}&search=' + URI.encode($('#txt_search_incoming_invoices').val());
-
-		$.ajax({url: url, success: function(result){
-	   		$('.search_incoming_invoice_results').html(result);
-	   		pager_incoming_invoices_ajax();
-
-		}});
+		$('.search_results').load(url, function() {
+			pager_incoming_invoices_ajax();
+		});
 	}
 
 	function pager_incoming_invoices_ajax() {
@@ -72,10 +126,42 @@
 
 			url = URI.parse($(this).attr('href'));
 			result = URI.parseQuery(url.query);
-			$('.search_incoming_invoice_results').load('/financial/account/transaction?action=search_incoming_invoices&transaction_id={{ transaction.id }}&q=' + URI.encode(result.q), function() {
+
+			$('.search_results').load('/financial/account/transaction?action=search_incoming_invoices&transaction_id={{ transaction.id }}&q=' + URI.encode(result.q), function() {
 				pager_incoming_invoices_ajax();
 			});
 		});
+	}
+
+	function table_incoming_invoices_tr_click(row) {
+		var source = $("#selected-incoming-invoice").html();
+		$('#confirm_link_incoming_invoices').html(source)
+		transaction_amount = {{ transaction.get_balance() }};
+		invoice_amount = row.data('amount');
+		console.log(transaction_amount);
+		console.log(invoice_amount);
+
+		$('#document_id').val(row.data('id'));
+
+		if (transaction_amount*-1 <= invoice_amount && transaction_amount < 0) {
+			$('#confirm_link_incoming_invoices #link_incoming_invoice_amount').val(transaction_amount);
+			$('#confirm_link_incoming_invoices #link_supplier_amount').val(0);
+		} else {
+			$('#confirm_link_incoming_invoices #link_incoming_invoice_amount').val(invoice_amount);
+			$('#confirm_link_incoming_invoices #link_supplier_amount').val( (Math.round( (invoice_amount+transaction_amount) * 100) / 100) * -1);
+		}
+
+		$('#supplier_amount_0').on('click', function() {
+			console.log('click');
+			$('#confirm_link_incoming_invoices #link_supplier_amount').val(0);
+		})
+
+		$('#supplier_amount_max').on('click', function() {
+			$('#confirm_link_incoming_invoices #link_supplier_amount').val(0);
+			transaction_amount = {{ transaction.get_balance() }};
+			max_amount = (Math.round( (invoice_amount+transaction_amount) * 100) / 100) * -1;
+			$('#confirm_link_incoming_invoices #link_supplier_amount').val(max_amount);
+		})
 	}
 </script>
 
