--- a/app/admin/template/administrative/customer/contact.twig
+++ b/app/admin/template/administrative/customer/contact.twig
@@ -10,7 +10,7 @@
 <div class="row">
 	{% for customer_contact in customer_contacts %}
 		<div class="col-xs-3 customer_contact" id="customer-contact-{{ customer_contact.id }}">
-			<div class="panel panel-default">
+			<div class="panel panel-default panel-link">
 				<div class="panel-body{% if customer_contacts|length == 1 %} bg-info{% endif %}">
 					<div class="actions hide">
 						<a href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contact-id="{{ customer_contact.id }}">
